--- a/ProjectKB/ProjectKB.csproj
+++ b/ProjectKB/ProjectKB.csproj
@@ -7,19 +7,22 @@
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
 	<EmbeddedResource Include="FontDesc\*.fnt" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Icon.ico" />
-    <None Remove="Icon.bmp" />
+    <Content Include="Icon.ico" />
+	<Content Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Icon.ico" />
-    <EmbeddedResource Include="Icon.bmp" />
+	<EmbeddedResource Include="Icon.ico">
+      <LogicalName>Icon.ico</LogicalName>
+	</EmbeddedResource>
+	<EmbeddedResource Include="Icon.bmp">
+      <LogicalName>Icon.bmp</LogicalName>
+	</EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
