--- a/ProjectKB/ProjectKB.csproj
+++ b/ProjectKB/ProjectKB.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
@@ -30,6 +30,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Sprites\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectKBShared\ProjectKBShared.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
